// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convert-tslint-to-eslint should not override .eslint config if migration in progress 1`] = `
{
  "ignorePatterns": [
    "**/*",
  ],
  "overrides": [
    {
      "files": [
        "*.ts",
        "*.tsx",
        "*.js",
        "*.jsx",
      ],
      "rules": {
        "@nx/enforce-module-boundaries": [
          "error",
          {
            "allow": [
              "@nx-example/shared/product/data/testing",
            ],
            "depConstraints": [
              {
                "onlyDependOnLibsWithTags": [
                  "type:feature",
                  "type:ui",
                ],
                "sourceTag": "type:app",
              },
              {
                "onlyDependOnLibsWithTags": [
                  "type:ui",
                  "type:data",
                  "type:types",
                  "type:state",
                ],
                "sourceTag": "type:feature",
              },
              {
                "onlyDependOnLibsWithTags": [
                  "type:types",
                ],
                "sourceTag": "type:types",
              },
              {
                "onlyDependOnLibsWithTags": [
                  "type:state",
                  "type:types",
                  "type:data",
                ],
                "sourceTag": "type:state",
              },
              {
                "onlyDependOnLibsWithTags": [
                  "type:types",
                ],
                "sourceTag": "type:data",
              },
              {
                "onlyDependOnLibsWithTags": [
                  "type:e2e-utils",
                ],
                "sourceTag": "type:e2e",
              },
              {
                "onlyDependOnLibsWithTags": [
                  "type:types",
                  "type:ui",
                ],
                "sourceTag": "type:ui",
              },
              {
                "onlyDependOnLibsWithTags": [
                  "scope:products",
                  "scope:shared",
                ],
                "sourceTag": "scope:products",
              },
              {
                "onlyDependOnLibsWithTags": [
                  "scope:cart",
                  "scope:shared",
                ],
                "sourceTag": "scope:cart",
              },
            ],
            "enforceBuildableLibDependency": true,
          },
        ],
      },
    },
    {
      "extends": [
        "plugin:@nx/typescript",
      ],
      "files": [
        "*.ts",
        "*.tsx",
      ],
      "rules": {},
    },
    {
      "extends": [
        "plugin:@nx/javascript",
      ],
      "files": [
        "*.js",
        "*.jsx",
      ],
      "rules": {},
    },
    {
      "files": [
        "*.ts",
      ],
      "plugins": [
        "eslint-plugin-import",
        "@angular-eslint/eslint-plugin",
        "@typescript-eslint",
      ],
      "rules": {
        "@angular-eslint/component-selector": [
          "error",
          {
            "prefix": "app",
            "style": "kebab-case",
            "type": "element",
          },
        ],
        "@angular-eslint/directive-selector": [
          "error",
          {
            "prefix": "app",
            "style": "camelCase",
            "type": "attribute",
          },
        ],
        "@angular-eslint/no-conflicting-lifecycle": "error",
        "@angular-eslint/no-host-metadata-property": "error",
        "@angular-eslint/no-input-rename": "error",
        "@angular-eslint/no-inputs-metadata-property": "error",
        "@angular-eslint/no-output-native": "error",
        "@angular-eslint/no-output-on-prefix": "error",
        "@angular-eslint/no-output-rename": "error",
        "@angular-eslint/no-outputs-metadata-property": "error",
        "@angular-eslint/use-lifecycle-interface": "error",
        "@angular-eslint/use-pipe-transform-interface": "error",
        "@typescript-eslint/consistent-type-definitions": "error",
        "@typescript-eslint/dot-notation": "off",
        "@typescript-eslint/explicit-member-accessibility": [
          "off",
          {
            "accessibility": "explicit",
          },
        ],
        "@typescript-eslint/member-ordering": "error",
        "@typescript-eslint/naming-convention": [
          "error",
          {
            "format": [
              "camelCase",
              "UPPER_CASE",
            ],
            "leadingUnderscore": "forbid",
            "selector": "variable",
            "trailingUnderscore": "forbid",
          },
        ],
        "@typescript-eslint/no-empty-function": "off",
        "@typescript-eslint/no-empty-interface": "error",
        "@typescript-eslint/no-inferrable-types": [
          "error",
          {
            "ignoreParameters": true,
          },
        ],
        "@typescript-eslint/no-misused-new": "error",
        "@typescript-eslint/no-non-null-assertion": "error",
        "@typescript-eslint/no-shadow": [
          "error",
          {
            "hoist": "all",
          },
        ],
        "@typescript-eslint/no-unused-expressions": "error",
        "@typescript-eslint/prefer-function-type": "error",
        "@typescript-eslint/unified-signatures": "error",
        "arrow-body-style": "error",
        "constructor-super": "error",
        "dot-notation": "off",
        "eqeqeq": [
          "error",
          "smart",
        ],
        "guard-for-in": "error",
        "id-denylist": "off",
        "id-match": "off",
        "import/no-deprecated": "warn",
        "no-bitwise": "error",
        "no-caller": "error",
        "no-console": [
          "error",
          {},
        ],
        "no-debugger": "error",
        "no-empty": "off",
        "no-empty-function": "off",
        "no-eval": "error",
        "no-fallthrough": "error",
        "no-new-wrappers": "error",
        "no-restricted-imports": [
          "error",
          "rxjs/Rx",
        ],
        "no-shadow": "off",
        "no-throw-literal": "error",
        "no-undef-init": "error",
        "no-underscore-dangle": "off",
        "no-unused-expressions": "off",
        "no-var": "error",
        "prefer-const": "error",
        "radix": "error",
      },
    },
    {
      "files": [
        "*.html",
      ],
      "plugins": [
        "@angular-eslint/eslint-plugin-template",
      ],
      "rules": {
        "@angular-eslint/template/banana-in-box": "error",
        "@angular-eslint/template/eqeqeq": "error",
        "@angular-eslint/template/no-negated-async": "error",
      },
    },
  ],
  "plugins": [
    "@nx",
  ],
  "root": true,
}
`;

exports[`convert-tslint-to-eslint should not override .eslint config if migration in progress 2`] = `
{
  "extends": [
    "../../.eslintrc.json",
  ],
  "ignorePatterns": [
    "!**/*",
  ],
  "overrides": [
    {
      "extends": [
        "plugin:@nx/angular",
        "plugin:@angular-eslint/template/process-inline-templates",
      ],
      "files": [
        "*.ts",
      ],
      "plugins": [
        "@angular-eslint/eslint-plugin",
        "@typescript-eslint",
      ],
      "rules": {
        "@angular-eslint/component-selector": [
          "error",
          {
            "prefix": "angular-app",
            "style": "kebab-case",
            "type": "element",
          },
        ],
        "@angular-eslint/directive-selector": [
          "error",
          {
            "prefix": "angular-app",
            "style": "camelCase",
            "type": "attribute",
          },
        ],
        "@typescript-eslint/no-empty-interface": "error",
      },
    },
    {
      "extends": [
        "plugin:@nx/angular-template",
      ],
      "files": [
        "*.html",
      ],
      "plugins": [
        "@angular-eslint/eslint-plugin-template",
      ],
      "rules": {
        "@angular-eslint/template/banana-in-box": "error",
      },
    },
  ],
}
`;

exports[`convert-tslint-to-eslint should not override .eslint config if migration in progress 3`] = `
{
  "ignorePatterns": [
    "**/*",
  ],
  "overrides": [
    {
      "files": [
        "*.ts",
        "*.tsx",
        "*.js",
        "*.jsx",
      ],
      "rules": {
        "@nx/enforce-module-boundaries": [
          "error",
          {
            "allow": [
              "@nx-example/shared/product/data/testing",
            ],
            "depConstraints": [
              {
                "onlyDependOnLibsWithTags": [
                  "type:feature",
                  "type:ui",
                ],
                "sourceTag": "type:app",
              },
              {
                "onlyDependOnLibsWithTags": [
                  "type:ui",
                  "type:data",
                  "type:types",
                  "type:state",
                ],
                "sourceTag": "type:feature",
              },
              {
                "onlyDependOnLibsWithTags": [
                  "type:types",
                ],
                "sourceTag": "type:types",
              },
              {
                "onlyDependOnLibsWithTags": [
                  "type:state",
                  "type:types",
                  "type:data",
                ],
                "sourceTag": "type:state",
              },
              {
                "onlyDependOnLibsWithTags": [
                  "type:types",
                ],
                "sourceTag": "type:data",
              },
              {
                "onlyDependOnLibsWithTags": [
                  "type:e2e-utils",
                ],
                "sourceTag": "type:e2e",
              },
              {
                "onlyDependOnLibsWithTags": [
                  "type:types",
                  "type:ui",
                ],
                "sourceTag": "type:ui",
              },
              {
                "onlyDependOnLibsWithTags": [
                  "scope:products",
                  "scope:shared",
                ],
                "sourceTag": "scope:products",
              },
              {
                "onlyDependOnLibsWithTags": [
                  "scope:cart",
                  "scope:shared",
                ],
                "sourceTag": "scope:cart",
              },
            ],
            "enforceBuildableLibDependency": false,
          },
        ],
      },
    },
    {
      "extends": [
        "plugin:@nx/typescript",
      ],
      "files": [
        "*.ts",
        "*.tsx",
      ],
      "rules": {},
    },
    {
      "extends": [
        "plugin:@nx/javascript",
      ],
      "files": [
        "*.js",
        "*.jsx",
      ],
      "rules": {},
    },
    {
      "files": [
        "*.ts",
      ],
      "plugins": [
        "eslint-plugin-import",
        "@angular-eslint/eslint-plugin",
        "@typescript-eslint",
      ],
      "rules": {
        "@angular-eslint/component-selector": [
          "error",
          {
            "prefix": "app",
            "style": "kebab-case",
            "type": "element",
          },
        ],
        "@angular-eslint/directive-selector": [
          "error",
          {
            "prefix": "app",
            "style": "camelCase",
            "type": "attribute",
          },
        ],
        "@angular-eslint/no-conflicting-lifecycle": "error",
        "@angular-eslint/no-host-metadata-property": "error",
        "@angular-eslint/no-input-rename": "error",
        "@angular-eslint/no-inputs-metadata-property": "error",
        "@angular-eslint/no-output-native": "error",
        "@angular-eslint/no-output-on-prefix": "error",
        "@angular-eslint/no-output-rename": "error",
        "@angular-eslint/no-outputs-metadata-property": "error",
        "@angular-eslint/use-lifecycle-interface": "error",
        "@angular-eslint/use-pipe-transform-interface": "error",
        "@typescript-eslint/consistent-type-definitions": "error",
        "@typescript-eslint/dot-notation": "off",
        "@typescript-eslint/explicit-member-accessibility": [
          "off",
          {
            "accessibility": "explicit",
          },
        ],
        "@typescript-eslint/member-ordering": "error",
        "@typescript-eslint/naming-convention": [
          "error",
          {
            "format": [
              "camelCase",
              "UPPER_CASE",
            ],
            "leadingUnderscore": "forbid",
            "selector": "variable",
            "trailingUnderscore": "forbid",
          },
        ],
        "@typescript-eslint/no-empty-function": "off",
        "@typescript-eslint/no-empty-interface": "error",
        "@typescript-eslint/no-inferrable-types": [
          "error",
          {
            "ignoreParameters": true,
          },
        ],
        "@typescript-eslint/no-misused-new": "error",
        "@typescript-eslint/no-non-null-assertion": "error",
        "@typescript-eslint/no-shadow": [
          "error",
          {
            "hoist": "all",
          },
        ],
        "@typescript-eslint/no-unused-expressions": "error",
        "@typescript-eslint/prefer-function-type": "error",
        "@typescript-eslint/unified-signatures": "error",
        "arrow-body-style": "error",
        "constructor-super": "error",
        "dot-notation": "off",
        "eqeqeq": [
          "error",
          "smart",
        ],
        "guard-for-in": "error",
        "id-denylist": "off",
        "id-match": "off",
        "import/no-deprecated": "warn",
        "no-bitwise": "error",
        "no-caller": "error",
        "no-console": [
          "error",
          {},
        ],
        "no-debugger": "error",
        "no-empty": "off",
        "no-empty-function": "off",
        "no-eval": "error",
        "no-fallthrough": "error",
        "no-new-wrappers": "error",
        "no-restricted-imports": [
          "error",
          "rxjs/Rx",
        ],
        "no-shadow": "off",
        "no-throw-literal": "error",
        "no-undef-init": "error",
        "no-underscore-dangle": "off",
        "no-unused-expressions": "off",
        "no-var": "error",
        "prefer-const": "error",
        "radix": "error",
      },
    },
    {
      "files": [
        "*.html",
      ],
      "plugins": [
        "@angular-eslint/eslint-plugin-template",
      ],
      "rules": {
        "@angular-eslint/template/banana-in-box": "error",
        "@angular-eslint/template/eqeqeq": "error",
        "@angular-eslint/template/no-negated-async": "error",
      },
    },
  ],
  "plugins": [
    "@nx",
  ],
  "root": true,
}
`;

exports[`convert-tslint-to-eslint should work for Angular applications 1`] = `
{
  "dependencies": {},
  "devDependencies": {
    "@angular-eslint/eslint-plugin": "~16.0.0",
    "@angular-eslint/eslint-plugin-template": "~16.0.0",
    "@angular-eslint/template-parser": "~16.0.0",
    "@nx/eslint-plugin": "0.0.1",
    "@nx/linter": "0.0.1",
    "@typescript-eslint/eslint-plugin": "^5.58.0",
    "@typescript-eslint/parser": "^5.58.0",
    "eslint": "~8.15.0",
    "eslint-config-prettier": "8.1.0",
    "eslint-plugin-import": "latest",
  },
  "name": "test-name",
}
`;

exports[`convert-tslint-to-eslint should work for Angular applications 2`] = `
{
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "name": "angular-app-1",
  "prefix": "angular-app",
  "projectType": "application",
  "root": "apps/angular-app-1",
  "targets": {
    "lint": {
      "executor": "@nx/linter:eslint",
      "options": {
        "lintFilePatterns": [
          "apps/angular-app-1/**/*.ts",
          "apps/angular-app-1/**/*.html",
        ],
      },
      "outputs": [
        "{options.outputFile}",
      ],
    },
  },
}
`;

exports[`convert-tslint-to-eslint should work for Angular applications 3`] = `
{
  "ignorePatterns": [
    "**/*",
  ],
  "overrides": [
    {
      "files": [
        "*.ts",
        "*.tsx",
        "*.js",
        "*.jsx",
      ],
      "rules": {
        "@nx/enforce-module-boundaries": [
          "error",
          {
            "allow": [
              "@nx-example/shared/product/data/testing",
            ],
            "depConstraints": [
              {
                "onlyDependOnLibsWithTags": [
                  "type:feature",
                  "type:ui",
                ],
                "sourceTag": "type:app",
              },
              {
                "onlyDependOnLibsWithTags": [
                  "type:ui",
                  "type:data",
                  "type:types",
                  "type:state",
                ],
                "sourceTag": "type:feature",
              },
              {
                "onlyDependOnLibsWithTags": [
                  "type:types",
                ],
                "sourceTag": "type:types",
              },
              {
                "onlyDependOnLibsWithTags": [
                  "type:state",
                  "type:types",
                  "type:data",
                ],
                "sourceTag": "type:state",
              },
              {
                "onlyDependOnLibsWithTags": [
                  "type:types",
                ],
                "sourceTag": "type:data",
              },
              {
                "onlyDependOnLibsWithTags": [
                  "type:e2e-utils",
                ],
                "sourceTag": "type:e2e",
              },
              {
                "onlyDependOnLibsWithTags": [
                  "type:types",
                  "type:ui",
                ],
                "sourceTag": "type:ui",
              },
              {
                "onlyDependOnLibsWithTags": [
                  "scope:products",
                  "scope:shared",
                ],
                "sourceTag": "scope:products",
              },
              {
                "onlyDependOnLibsWithTags": [
                  "scope:cart",
                  "scope:shared",
                ],
                "sourceTag": "scope:cart",
              },
            ],
            "enforceBuildableLibDependency": true,
          },
        ],
      },
    },
    {
      "extends": [
        "plugin:@nx/typescript",
      ],
      "files": [
        "*.ts",
        "*.tsx",
      ],
      "rules": {},
    },
    {
      "extends": [
        "plugin:@nx/javascript",
      ],
      "files": [
        "*.js",
        "*.jsx",
      ],
      "rules": {},
    },
    {
      "files": [
        "*.ts",
      ],
      "plugins": [
        "eslint-plugin-import",
        "@angular-eslint/eslint-plugin",
        "@typescript-eslint",
      ],
      "rules": {
        "@angular-eslint/component-selector": [
          "error",
          {
            "prefix": "app",
            "style": "kebab-case",
            "type": "element",
          },
        ],
        "@angular-eslint/directive-selector": [
          "error",
          {
            "prefix": "app",
            "style": "camelCase",
            "type": "attribute",
          },
        ],
        "@angular-eslint/no-conflicting-lifecycle": "error",
        "@angular-eslint/no-host-metadata-property": "error",
        "@angular-eslint/no-input-rename": "error",
        "@angular-eslint/no-inputs-metadata-property": "error",
        "@angular-eslint/no-output-native": "error",
        "@angular-eslint/no-output-on-prefix": "error",
        "@angular-eslint/no-output-rename": "error",
        "@angular-eslint/no-outputs-metadata-property": "error",
        "@angular-eslint/use-lifecycle-interface": "error",
        "@angular-eslint/use-pipe-transform-interface": "error",
        "@typescript-eslint/consistent-type-definitions": "error",
        "@typescript-eslint/dot-notation": "off",
        "@typescript-eslint/explicit-member-accessibility": [
          "off",
          {
            "accessibility": "explicit",
          },
        ],
        "@typescript-eslint/member-ordering": "error",
        "@typescript-eslint/naming-convention": [
          "error",
          {
            "format": [
              "camelCase",
              "UPPER_CASE",
            ],
            "leadingUnderscore": "forbid",
            "selector": "variable",
            "trailingUnderscore": "forbid",
          },
        ],
        "@typescript-eslint/no-empty-function": "off",
        "@typescript-eslint/no-empty-interface": "error",
        "@typescript-eslint/no-inferrable-types": [
          "error",
          {
            "ignoreParameters": true,
          },
        ],
        "@typescript-eslint/no-misused-new": "error",
        "@typescript-eslint/no-non-null-assertion": "error",
        "@typescript-eslint/no-shadow": [
          "error",
          {
            "hoist": "all",
          },
        ],
        "@typescript-eslint/no-unused-expressions": "error",
        "@typescript-eslint/prefer-function-type": "error",
        "@typescript-eslint/unified-signatures": "error",
        "arrow-body-style": "error",
        "constructor-super": "error",
        "dot-notation": "off",
        "eqeqeq": [
          "error",
          "smart",
        ],
        "guard-for-in": "error",
        "id-denylist": "off",
        "id-match": "off",
        "import/no-deprecated": "warn",
        "no-bitwise": "error",
        "no-caller": "error",
        "no-console": [
          "error",
          {},
        ],
        "no-debugger": "error",
        "no-empty": "off",
        "no-empty-function": "off",
        "no-eval": "error",
        "no-fallthrough": "error",
        "no-new-wrappers": "error",
        "no-restricted-imports": [
          "error",
          "rxjs/Rx",
        ],
        "no-shadow": "off",
        "no-throw-literal": "error",
        "no-undef-init": "error",
        "no-underscore-dangle": "off",
        "no-unused-expressions": "off",
        "no-var": "error",
        "prefer-const": "error",
        "radix": "error",
      },
    },
    {
      "files": [
        "*.html",
      ],
      "plugins": [
        "@angular-eslint/eslint-plugin-template",
      ],
      "rules": {
        "@angular-eslint/template/banana-in-box": "error",
        "@angular-eslint/template/eqeqeq": "error",
        "@angular-eslint/template/no-negated-async": "error",
      },
    },
  ],
  "plugins": [
    "@nx",
  ],
  "root": true,
}
`;

exports[`convert-tslint-to-eslint should work for Angular applications 4`] = `
{
  "extends": [
    "../../.eslintrc.json",
  ],
  "ignorePatterns": [
    "!**/*",
  ],
  "overrides": [
    {
      "extends": [
        "plugin:@nx/angular",
        "plugin:@angular-eslint/template/process-inline-templates",
      ],
      "files": [
        "*.ts",
      ],
      "parserOptions": {
        "project": [
          "apps/angular-app-1/tsconfig.*?.json",
        ],
      },
      "plugins": [
        "@angular-eslint/eslint-plugin",
        "@typescript-eslint",
      ],
      "rules": {
        "@angular-eslint/component-selector": [
          "error",
          {
            "prefix": "angular-app",
            "style": "kebab-case",
            "type": "element",
          },
        ],
        "@angular-eslint/directive-selector": [
          "error",
          {
            "prefix": "angular-app",
            "style": "camelCase",
            "type": "attribute",
          },
        ],
        "@typescript-eslint/await-thenable": "error",
        "@typescript-eslint/no-empty-interface": "error",
      },
    },
    {
      "extends": [
        "plugin:@nx/angular-template",
      ],
      "files": [
        "*.html",
      ],
      "plugins": [
        "@angular-eslint/eslint-plugin-template",
      ],
      "rules": {
        "@angular-eslint/template/banana-in-box": "error",
      },
    },
  ],
}
`;

exports[`convert-tslint-to-eslint should work for Angular libraries 1`] = `
{
  "dependencies": {},
  "devDependencies": {
    "@angular-eslint/eslint-plugin": "~16.0.0",
    "@angular-eslint/eslint-plugin-template": "~16.0.0",
    "@angular-eslint/template-parser": "~16.0.0",
    "@nx/eslint-plugin": "0.0.1",
    "@nx/linter": "0.0.1",
    "@typescript-eslint/eslint-plugin": "^5.58.0",
    "@typescript-eslint/parser": "^5.58.0",
    "eslint": "~8.15.0",
    "eslint-config-prettier": "8.1.0",
    "eslint-plugin-import": "latest",
  },
  "name": "test-name",
}
`;

exports[`convert-tslint-to-eslint should work for Angular libraries 2`] = `
{
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "name": "angular-lib-1",
  "prefix": "angular-app",
  "projectType": "library",
  "root": "libs/angular-lib-1",
  "targets": {
    "lint": {
      "executor": "@nx/linter:eslint",
      "options": {
        "lintFilePatterns": [
          "libs/angular-lib-1/**/*.ts",
          "libs/angular-lib-1/**/*.html",
        ],
      },
      "outputs": [
        "{options.outputFile}",
      ],
    },
  },
}
`;

exports[`convert-tslint-to-eslint should work for Angular libraries 3`] = `
{
  "ignorePatterns": [
    "**/*",
  ],
  "overrides": [
    {
      "files": [
        "*.ts",
        "*.tsx",
        "*.js",
        "*.jsx",
      ],
      "rules": {
        "@nx/enforce-module-boundaries": [
          "error",
          {
            "allow": [
              "@nx-example/shared/product/data/testing",
            ],
            "depConstraints": [
              {
                "onlyDependOnLibsWithTags": [
                  "type:feature",
                  "type:ui",
                ],
                "sourceTag": "type:app",
              },
              {
                "onlyDependOnLibsWithTags": [
                  "type:ui",
                  "type:data",
                  "type:types",
                  "type:state",
                ],
                "sourceTag": "type:feature",
              },
              {
                "onlyDependOnLibsWithTags": [
                  "type:types",
                ],
                "sourceTag": "type:types",
              },
              {
                "onlyDependOnLibsWithTags": [
                  "type:state",
                  "type:types",
                  "type:data",
                ],
                "sourceTag": "type:state",
              },
              {
                "onlyDependOnLibsWithTags": [
                  "type:types",
                ],
                "sourceTag": "type:data",
              },
              {
                "onlyDependOnLibsWithTags": [
                  "type:e2e-utils",
                ],
                "sourceTag": "type:e2e",
              },
              {
                "onlyDependOnLibsWithTags": [
                  "type:types",
                  "type:ui",
                ],
                "sourceTag": "type:ui",
              },
              {
                "onlyDependOnLibsWithTags": [
                  "scope:products",
                  "scope:shared",
                ],
                "sourceTag": "scope:products",
              },
              {
                "onlyDependOnLibsWithTags": [
                  "scope:cart",
                  "scope:shared",
                ],
                "sourceTag": "scope:cart",
              },
            ],
            "enforceBuildableLibDependency": true,
          },
        ],
      },
    },
    {
      "extends": [
        "plugin:@nx/typescript",
      ],
      "files": [
        "*.ts",
        "*.tsx",
      ],
      "rules": {},
    },
    {
      "extends": [
        "plugin:@nx/javascript",
      ],
      "files": [
        "*.js",
        "*.jsx",
      ],
      "rules": {},
    },
    {
      "files": [
        "*.ts",
      ],
      "plugins": [
        "eslint-plugin-import",
        "@angular-eslint/eslint-plugin",
        "@typescript-eslint",
      ],
      "rules": {
        "@angular-eslint/component-selector": [
          "error",
          {
            "prefix": "app",
            "style": "kebab-case",
            "type": "element",
          },
        ],
        "@angular-eslint/directive-selector": [
          "error",
          {
            "prefix": "app",
            "style": "camelCase",
            "type": "attribute",
          },
        ],
        "@angular-eslint/no-conflicting-lifecycle": "error",
        "@angular-eslint/no-host-metadata-property": "error",
        "@angular-eslint/no-input-rename": "error",
        "@angular-eslint/no-inputs-metadata-property": "error",
        "@angular-eslint/no-output-native": "error",
        "@angular-eslint/no-output-on-prefix": "error",
        "@angular-eslint/no-output-rename": "error",
        "@angular-eslint/no-outputs-metadata-property": "error",
        "@angular-eslint/use-lifecycle-interface": "error",
        "@angular-eslint/use-pipe-transform-interface": "error",
        "@typescript-eslint/consistent-type-definitions": "error",
        "@typescript-eslint/dot-notation": "off",
        "@typescript-eslint/explicit-member-accessibility": [
          "off",
          {
            "accessibility": "explicit",
          },
        ],
        "@typescript-eslint/member-ordering": "error",
        "@typescript-eslint/naming-convention": [
          "error",
          {
            "format": [
              "camelCase",
              "UPPER_CASE",
            ],
            "leadingUnderscore": "forbid",
            "selector": "variable",
            "trailingUnderscore": "forbid",
          },
        ],
        "@typescript-eslint/no-empty-function": "off",
        "@typescript-eslint/no-empty-interface": "error",
        "@typescript-eslint/no-inferrable-types": [
          "error",
          {
            "ignoreParameters": true,
          },
        ],
        "@typescript-eslint/no-misused-new": "error",
        "@typescript-eslint/no-non-null-assertion": "error",
        "@typescript-eslint/no-shadow": [
          "error",
          {
            "hoist": "all",
          },
        ],
        "@typescript-eslint/no-unused-expressions": "error",
        "@typescript-eslint/prefer-function-type": "error",
        "@typescript-eslint/unified-signatures": "error",
        "arrow-body-style": "error",
        "constructor-super": "error",
        "dot-notation": "off",
        "eqeqeq": [
          "error",
          "smart",
        ],
        "guard-for-in": "error",
        "id-denylist": "off",
        "id-match": "off",
        "import/no-deprecated": "warn",
        "no-bitwise": "error",
        "no-caller": "error",
        "no-console": [
          "error",
          {},
        ],
        "no-debugger": "error",
        "no-empty": "off",
        "no-empty-function": "off",
        "no-eval": "error",
        "no-fallthrough": "error",
        "no-new-wrappers": "error",
        "no-restricted-imports": [
          "error",
          "rxjs/Rx",
        ],
        "no-shadow": "off",
        "no-throw-literal": "error",
        "no-undef-init": "error",
        "no-underscore-dangle": "off",
        "no-unused-expressions": "off",
        "no-var": "error",
        "prefer-const": "error",
        "radix": "error",
      },
    },
    {
      "files": [
        "*.html",
      ],
      "plugins": [
        "@angular-eslint/eslint-plugin-template",
      ],
      "rules": {
        "@angular-eslint/template/banana-in-box": "error",
        "@angular-eslint/template/eqeqeq": "error",
        "@angular-eslint/template/no-negated-async": "error",
      },
    },
  ],
  "plugins": [
    "@nx",
  ],
  "root": true,
}
`;

exports[`convert-tslint-to-eslint should work for Angular libraries 4`] = `
{
  "extends": [
    "../../.eslintrc.json",
  ],
  "ignorePatterns": [
    "!**/*",
  ],
  "overrides": [
    {
      "extends": [
        "plugin:@nx/angular",
        "plugin:@angular-eslint/template/process-inline-templates",
      ],
      "files": [
        "*.ts",
      ],
      "plugins": [
        "@angular-eslint/eslint-plugin",
        "@typescript-eslint",
      ],
      "rules": {
        "@angular-eslint/component-selector": [
          "error",
          {
            "prefix": "angular-app",
            "style": "kebab-case",
            "type": "element",
          },
        ],
        "@angular-eslint/directive-selector": [
          "error",
          {
            "prefix": "angular-app",
            "style": "camelCase",
            "type": "attribute",
          },
        ],
        "@typescript-eslint/no-empty-interface": "error",
      },
    },
    {
      "extends": [
        "plugin:@nx/angular-template",
      ],
      "files": [
        "*.html",
      ],
      "plugins": [
        "@angular-eslint/eslint-plugin-template",
      ],
      "rules": {
        "@angular-eslint/template/banana-in-box": "error",
      },
    },
  ],
}
`;
